tests/compile-fail/semck/redeclare-var.rs
fn main() {
    let a: int = 0;
    let a: int = 1;  //! ERROR(3:9): cannot redeclare `a`
}